# Progetto

./: CMakeLists.txt  ContoCorrente.cpp  ContoCorrente.h  Transazione.cpp  Transazione.h  Transazioni.cpp  Transazioni.h  main.cpp  tests.cpp  transazioni.txt  transazioni1.txt  transazioni2.txt
test/: CMakeLists.txt  tests.cpp
test/lib/googletest/: CMakeLists.txt
unit testing/: tests.cpp
